# chronos

./: LICENSE  README.md  pyproject.toml  requirements.txt
chronos/: __init__.py  cnn_probe.py  config.py  defaults.py  mlp_probe.py  predictors.py  transformer_probe.py
epoch_convergence_prediction/: CNN.py  MLP.py  Transformer.py
epoch_convergence_prediction/data/: CNN.csv  MLP.csv  Transformer.csv
epoch_time_collection/: CNN.py  MLP.py  Transformer.py
epoch_time_prediction/: CNN.py  MLP.py  Transformer.py
epoch_time_prediction/data/: CNN.csv  MLP.csv  Transformer.csv
