[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos"
version = "0.1.0"
description = "A research framework for deep learning training and convergence time prediction."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"

dependencies = [
    "datasets==4.3.0",
    "gdown==5.2.0",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "Pillow==11.3.0",
    "scikit-learn==1.5.1",
    "timm==1.0.21",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "tqdm==4.66.6",
    "xgboost==2.1.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chronos*"]

[project.urls]
Source = "https://github.com/anonymousgithacc/chronos"
